--- a/culture-portal/package.json
+++ b/culture-portal/package.json
@@ -2,8 +2,9 @@
   "name": "culture-portal",
   "version": "0.1.0",
   "private": true,
-  "homepage": ".",
+  "homepage": "https://dmtrby.github.io/testing-react",
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "i18next": "^17.0.6",
     "i18next-xhr-backend": "^3.0.0",
     "react": "^16.8.6",
@@ -14,13 +15,16 @@
     "react-scripts": "3.0.1",
     "react-search-field": "^1.0.0",
     "timeline": "^3.4.1",
-    "vertical-timeline-component-for-react": "^1.0.6"
+    "vertical-timeline-component-for-react": "^1.0.6",
+    "yarn": "^1.17.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
